2006-07-05  Alexander V. Lukyanov <lav@yars.free.net>

	* SleepJob.cc: disable option reordering in repeat; small cleanup.

2006-07-04  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h, Http.cc: (SetLimit) new method;
	  (UNKNOWN_POS) new constant; move FILE_END here.
	* FileCopy.cc, FileCopy.h: use SetLimit; move FILE_END to FileAccess.h.

2006-07-03  Alexander V. Lukyanov <lav@yars.free.net>

	* CopyJob.h: (SetRangeLimit) new method.
	* FileCopy.h: (SetRangeLimit) new method; make SetRange seek when needed.
	* pgetJob.cc, pgetJob.h: add explicit start0 and limit0 members for chunk 0;
	  read position for chunk 0 before trying to fetch it (when pget_cont).

2006-06-30  Alexander V. Lukyanov <lav@yars.free.net>

	* ResMgr.cc, ResMgr.h, resource.cc, Cache.h: rename ResDecl to ResType;
	  make ResDecl a derived from ResType; make resources a static array
	  of structures (to save on constructors); make ResDecls class to
	  register bulk of ResType's.
	* GetJob.cc, GetJob.h: add truncate_target_first flag (for pget).
	* pgetJob.cc, pgetJob.h, MirrorJob.cc, commands.cc: support pget -c.

2006-06-28  Alexander V. Lukyanov <lav@yars.free.net>

	* GetJob.cc, GetJob.h, pgetJob.cc, pgetJob.h: simplify copy peer
	  creation; pass url from pget to CreateCopyPeer (this fixes
	  pget http://...?args).
	* resource.cc, ftpclass.cc: add use-allo setting.

2006-06-26  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, FileCopy.cc, FileCopy.h: support for ALLO command; get file size
	  for local sources in any case.
	* Fish.cc: use GNU head if available for upload; use a larger bs for dd in upload
	  and count characters with wc -c (a great speed up for both cases). A fixed
	  version of script by Dmitry Butskoj <buc@odusz.so-cdu.ru> was used (from mc).

2006-06-19  Alexander V. Lukyanov <lav@yars.free.net>

	* StatusLine.cc: handle prev_line==0 case (fixes coredump).

2006-06-16  Alexander V. Lukyanov <lav@yars.free.net>
